支持为视频生成翻译后的音频文件

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
   "moviepy>=1.0.3",
   "pydub>=0.25.1",
   "gradio>=4.0.0",
+  "transformers>=4.57.3",
+  "accelerate>=1.12.0",
 ]
 
 [tool.uv.sources]
